<resources>
    <string name="app_name">Munduz</string>

    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="favorite">Избранное</string>
    <string name="basket">Корзина</string>
    <string name="more">Еще</string>
    <string name="recommended">Рекомендуем</string>
    <string name="contacts_us">Связаться с нами</string>
    <string name="about_app">О Приложении</string>
    <string name="write_to_us">Написать нам</string>

    <string name="purchases_amount">"К оплате "</string>
    <string name="delivery">"Доставка"</string>
    <string name="pickup">"Самовывоз"</string>
    <string name="order">"Заказать"</string>
    <string name="success_order"> "Ваш заказ успешно выполнен \n Вам позвонять в течении 30 минут" </string>
    <string name="search_hint">Найти товар</string>
    <string name="version_title">Version</string>
    <string name="version_code">1.18</string>
    <string name="ulan_erkinbaev">Улан Эркинбаев</string>
    <string name="developer">Разрабочик</string>
    <string name="ready_purchase">Оформить Заказ</string>
    <string name="goto_home">На главную</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="phone_number_russia">+7</string>
    <string name="bottom_text_phone_number">по этому номеру вам позвонят</string>
    <string name="comment_hint">Комментарий (необязательный)</string>
    <string name="your_name">Имя</string>
    <string name="phone_number">Телефонный номер</string>
    <string name="error_catalog">Ошибка в каталоге</string>
    <string name="avalaible">Есть в наличии</string>
    <string name="delivery_text"> Доставка 190р до подъезда. \nВнутри МКАД(за МКАД 20р каждый 1км) \nДоставка по России</string>
    <string name="description">Описание</string>
    <string name="your_message">Сообщение</string>
    <string name="send">Отправить</string>
    <string name="search">Поиск</string>

    <string name="empty_filter_products">Данный каталог пуст</string>
    <string name="empty_searched_list">Список пуст</string>
    <string name="empty_favorite_products">У вас пока нет понравивщихся</string>
    <string name="empty_product">Данный продукт не существует</string>
    <string name="empty_fields"> Заполните поля </string>
    <string name="error_network_text">Ошибка с соединения с сервером</string>
    <string name="error_network_button">Повторить</string>
    <string name="empty_basket">Корзина пуста</string>
    <string name="empty_favorites">У вас пока нет избранных</string>
    <string name="empty_recomended">Рекомендаций пока нет</string>
    <string name="available">В наличии</string>
    <string name="cancel">Отмена</string>
    <string name="phone">Телефон</string>
    <string name="metro">Метро</string>
    <string name="address">Адрес</string>
    <string name="app_updated">Приложение обновлено</string>
    <string name="restart">Рестарт</string>
    <string name="no_internet">"Нет подключения к Интернету"</string>
    <string name="order_sum">Cумма c доставкой (190 рублей по Москве)</string>

    <string-array name="category">
        <item>Продукты</item>
        <item>Напитки</item>
        <item>Матрасы/Одеяло</item>
        <item>Кухня</item>
        <item>Казаны</item>
        <item>Чемоданы</item>
        <item>Одежда</item>
        <item>Химия</item>
        <item>Книги</item>
    </string-array>
</resources>