<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="45dp">

    <EditText
            android:id="@+id/writer_name"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/your_name">

    </EditText>

    <EditText
            android:id="@+id/writer_text"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:hint="@string/your_message">

    </EditText>

    <Button
            android:id="@+id/writer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/send">

    </Button>


</LinearLayout>