<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:layout_margin="7dp"
            android:background="@drawable/bottom_line"
            android:orientation="vertical">

        <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/app_icon">

        </ImageView>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/dev_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:text="@string/developer"
                android:textSize="18sp">

        </TextView>

        <TextView
                android:id="@+id/dev_about_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dev_about"
                android:layout_marginLeft="9dp"
                android:layout_marginBottom="9dp"
                android:text="@string/ulan_erkinbaev"
                android:textSize="16sp"
                android:textStyle="bold">

        </TextView>

        <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dev_about_bottom"
                android:layout_marginLeft="9dp"
                android:text="@string/version_title"
                android:textSize="18sp">

        </TextView>

        <TextView
                android:id="@+id/ver_about_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_version"
                android:layout_marginLeft="9dp"
                android:text="@string/version_code"
                android:textSize="16sp"
                android:textStyle="bold">
            
        </TextView>

    </LinearLayout>

</LinearLayout>