<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/sum_of_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone">

            </TextView>


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/basket_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
            android:id="@+id/purchase_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="58dp"
            android:background="@color/purple"
            android:text="@string/ready_purchase"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone">

    </Button>

    <LinearLayout
            android:id="@+id/empty_basket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="gone">

        <TextView
                android:id="@+id/empty_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_basket"
                android:textSize="18sp"
                android:layout_margin="8dp">

        </TextView>

        <Button
                android:id="@+id/open_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goto_home">

        </Button>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>